# concertvenues

./: .gitignore  README.md  config.toml  index.html  pyproject.toml  requirements.txt  secrets.example  serve.py
.github/workflows/: deploy.yml
concertvenues/: cli.py  config.py  db.py  models.py
concertvenues/generator/: build.py
concertvenues/scrapers/: __init__.py  alexandrapalace.py  base.py  earthackney.py  electricballroom.py  islingtonassemblyhall.py  jazzcafe.py  koko.py  o2academy.py  roundhouse.py  royalalberthall.py  thegarage.py  theo2.py  ticketmaster.py  unionchapel.py  venue_template.py
static/css/: style.css
static/js/: calendar.js
templates/: base.html  index.html  venue.html
tests/: test_scrapers.py
